@@ -1,3 +1,8 @@
+2005-04-11  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/common/stream.cxx (read): don't reference flags.buffering
+	when configured by CDL to be unbuffered.
+
 2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* include/stdio.h: Added CYGBLD_ATTRIB_{PRINTF|SCANF}_FORMAT where
@@ -473,6 +478,7 @@
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
 // Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
+// Copyright (C) 2004 eCosCentric Limited
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
